vercel.json updated

--- a/RandomPassword/vercel.json
+++ b/RandomPassword/vercel.json
@@ -2,4 +2,19 @@
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
   ]
+    ,
+  "version": 2,
+  "name": "RandomPassword",
+  "builds": [
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
