--- a/RandomPassword/vercel.json
+++ b/RandomPassword/vercel.json
@@ -1,20 +1,8 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ]
-    ,
-  "version": 2,
-  "name": "RandomPassword",
-  "builds": [
     {
-      "src": "index.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
